feat: integrated tests
