# routes/http.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 	"quote-server/services"
 	"quote-server/types"
+	"strconv"
 
 	"github.com/labstack/echo/v4"
 )
@@ -54,4 +55,39 @@ func httpPostHandler(c echo.Context, httpService services.HttpService) error {
 	}
 
 	return c.JSON(http.StatusOK, response)
+}
+
+// @Summary HTTP Handler for Fetching Multiple Quotes
+// @Description Fetches multiple quotes from Postman Echo API based on the limit parameter
+// @Produce json
+// @Param limit query int true "Number of quotes to fetch"
+// @Success 200 {array} types.QuoteResponse "List of quotes"
+// @Failure 400 {string} string "Bad request - limit parameter is required or invalid"
+// @Failure 500 {object} map[string]string "Internal server error"
+// @Router /quotes [get]
+func httpGetQuotesHandler(c echo.Context, httpService services.HttpService) error {
+	// Get the limit from the query parameter
+	limitParam := c.QueryParam("limit")
+	if limitParam == "" {
+		return c.JSON(http.StatusBadRequest, "limit parameter is required")
+	}
+
+	// Convert the limit to an integer
+	limit, err := strconv.Atoi(limitParam)
+	if err != nil || limit <= 0 {
+		return c.JSON(http.StatusBadRequest, "invalid limit parameter")
+	}
+
+	// Call the service to fetch quotes
+	quotes, err := httpService.GetQuotes(int32(limit))
+
+	// If there were any partial errors, we include them in the response
+	if err != nil {
+		return c.JSON(http.StatusUnprocessableEntity, map[string]interface{}{
+			"error": err.Error(),
+		})
+	}
+
+	// Return the successful list of quotes
+	return c.JSON(http.StatusOK, quotes)
 }
